--- a/index.html
+++ b/index.html
@@ -51,36 +51,36 @@
 				вашего бизнеса<br>
 				По франчайзингу
 			</h1>
-			<span style="left:158px; bottom: 334px; -webkit-transform: rotate(5deg); -moz-transform: rotate(5deg); -o-transform: rotate(5deg); -ms-transform: rotate(5deg);transform: rotate(5deg);"></span>
-			<span style="left:128px; bottom: 398px; -webkit-transform: rotate(-1deg); -moz-transform: rotate(-1deg); -o-transform: rotate(-1deg); -ms-transform: rotate(-1deg);transform: rotate(-1deg);"></span>
-			<span style="left:86px; bottom: 277px; -webkit-transform: rotate(-3deg); -moz-transform: rotate(-3deg); -o-transform: rotate(-3deg); -ms-transform: rotate(-3deg);transform: rotate(-3deg);"></span>
-			<span style="left:-16px; bottom: 222px; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg);transform: rotate(0deg);"></span>
-			<span style="left:195px; bottom: 234px; -webkit-transform: rotate(-1deg); -moz-transform: rotate(-1deg); -o-transform: rotate(-1deg); -ms-transform: rotate(-1deg);transform: rotate(-1deg);"></span>
-			<span style="left:261px; bottom: 379px; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg);transform: rotate(0deg);"></span>
-			<span style="left:306px; bottom: 273px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
-			<span style="left:436px; bottom: 210px; -webkit-transform: rotate(4deg); -moz-transform: rotate(4deg); -o-transform: rotate(4deg); -ms-transform: rotate(4deg);transform: rotate(4deg);"></span>
-			<span style="left:509px; bottom: 106px; -webkit-transform: rotate(5deg); -moz-transform: rotate(5deg); -o-transform: rotate(5deg); -ms-transform: rotate(5deg);transform: rotate(5deg);"></span>
-			<span style="left:512px; bottom: 292px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
-			<span style="left:742px; bottom: 90px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
-			<span style="left:982px; bottom: 96px; -webkit-transform: rotate(-3deg); -moz-transform: rotate(-3deg); -o-transform: rotate(-3deg); -ms-transform: rotate(-3deg);transform: rotate(-3deg);"></span>
-			<span style="left:941px; bottom: 377px; -webkit-transform: rotate(-2deg); -moz-transform: rotate(-2deg); -o-transform: rotate(-2deg); -ms-transform: rotate(-2deg);transform: rotate(-2deg);"></span>
-			<span style="left:1060px; bottom: 451px; -webkit-transform: rotate(1deg); -moz-transform: rotate(1deg); -o-transform: rotate(1deg); -ms-transform: rotate(1deg);transform: rotate(1deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="0" style="left:158px; bottom: 334px; -webkit-transform: rotate(5deg); -moz-transform: rotate(5deg); -o-transform: rotate(5deg); -ms-transform: rotate(5deg);transform: rotate(5deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="500" style="left:128px; bottom: 398px; -webkit-transform: rotate(-1deg); -moz-transform: rotate(-1deg); -o-transform: rotate(-1deg); -ms-transform: rotate(-1deg);transform: rotate(-1deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="1000" style="left:86px; bottom: 277px; -webkit-transform: rotate(-3deg); -moz-transform: rotate(-3deg); -o-transform: rotate(-3deg); -ms-transform: rotate(-3deg);transform: rotate(-3deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="1500" style="left:-16px; bottom: 222px; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg);transform: rotate(0deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="2000" style="left:195px; bottom: 234px; -webkit-transform: rotate(-1deg); -moz-transform: rotate(-1deg); -o-transform: rotate(-1deg); -ms-transform: rotate(-1deg);transform: rotate(-1deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="2500" style="left:261px; bottom: 379px; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg);transform: rotate(0deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="3000" style="left:306px; bottom: 273px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="3500" style="left:436px; bottom: 210px; -webkit-transform: rotate(4deg); -moz-transform: rotate(4deg); -o-transform: rotate(4deg); -ms-transform: rotate(4deg);transform: rotate(4deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="4000" style="left:509px; bottom: 106px; -webkit-transform: rotate(5deg); -moz-transform: rotate(5deg); -o-transform: rotate(5deg); -ms-transform: rotate(5deg);transform: rotate(5deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="4200" style="left:512px; bottom: 292px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="4400" style="left:742px; bottom: 90px; -webkit-transform: rotate(3deg); -moz-transform: rotate(3deg); -o-transform: rotate(3deg); -ms-transform: rotate(3deg);transform: rotate(3deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="4600" style="left:982px; bottom: 96px; -webkit-transform: rotate(-3deg); -moz-transform: rotate(-3deg); -o-transform: rotate(-3deg); -ms-transform: rotate(-3deg);transform: rotate(-3deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="4800" style="left:941px; bottom: 377px; -webkit-transform: rotate(-2deg); -moz-transform: rotate(-2deg); -o-transform: rotate(-2deg); -ms-transform: rotate(-2deg);transform: rotate(-2deg);"></span>
+			<span class="anim showIn" data-anim="showIn" data-delay="5000" style="left:1060px; bottom: 451px; -webkit-transform: rotate(1deg); -moz-transform: rotate(1deg); -o-transform: rotate(1deg); -ms-transform: rotate(1deg);transform: rotate(1deg);"></span>
 		</div>
 	</div>
 	<div class="b b-2">
-		<div class="b-block">
+		<div class="b-block" id="key-tabs">
 			<div class="b-title clearfix">
 				<h2 class="title">Кейсы</h2>
 				<h3>Более 10 лет работы, более 100 реализованных проектов</h3>
 			</div>
 			<ul class="keys">
-				<li class="active"><span>1</span><span></span></li>
-				<li><span>2</span><span></span></li>
+				<li><a href="#key-1"><span>1</span><span></span></a></li>
+				<li><a href="#key-2"><span>2</span><span></span></a></li>
 				<li><span>3</span><span></span></li>
 				<li><span>4</span><span></span></li>
 				<li><span>5</span><span></span></li>
 			</ul>
-			<div class="b-key" id="b-key-1">
+			<div class="b-key" id="key-1">
 				<div class="b top clearfix">
 					<div class="diagram">
 						<img src="i/diagram-1-1.png">
@@ -110,10 +110,39 @@
 							</div>
 						</div>
 						<div class="map">
-							<div></div>
-							<div></div>
-							<div class="point-1"></div>
-							<div class="point-1"></div>
+							
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="b-key" id="key-2">
+				<div class="b top clearfix">
+					<div class="diagram">
+						<img src="i/diagram-2-1.png">
+						<img src="i/diagram-2-2.png">
+						<img src="i/diagram-2-3.png">
+					</div>
+					<div class="work right">
+						<h4>1Проделанная работа</h4>
+						<p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому</p>
+					</div>
+				</div>
+				<div class="bot clearfix">
+					<div class="profile left">
+						<div class="photo" style="background-image: url('i/key-photo-2.jpg')"></div>
+						<h5>Андрей Козлов</h5>
+						<h6>Собственник “МилкиМунс”</h6>
+					</div>
+					<div class="content right">
+						<div class="text clearfix">
+							<p class="quote left">Договорились по условиям, и работа закипела...</p>
+							<div class="video right">
+								<h6>Видео-отзыв ( длительность <span>1:28</span> )</h6>
+								<iframe width="306" height="173" src="https://www.youtube.com/embed/Lepkd972JUg?enablejsapi=1" frameborder="0" allowfullscreen id="video"></iframe>
+							</div>
+						</div>
+						<div class="map">
+							
 						</div>
 					</div>
 				</div>
@@ -309,9 +338,9 @@
 			<div class="step step-1 clearfix">
 				<div class="steps clearfix">
 					<h2 class="left">3 важнейших этапа создания франшизы</h2>
-					<span class="step1"></span>
-					<span class="step2"></span>
-					<span class="step3"></span>
+					<span class="active"></span>
+					<span data-block=".step-2"></span>
+					<span data-block=".step-3"></span>
 				</div>
 				<div class="step-cont left">
 					<div class="step-title">
@@ -346,9 +375,9 @@
 			<div class="step step-2 clearfix">
 				<div class="steps clearfix">
 					<h2 class="left">3 важнейших этапа создания франшизы</h2>
-					<span class="step1"></span>
-					<span class="step2"></span>
-					<span class="step3"></span>
+					<span data-block=".step-1"></span>
+					<span class="active"></span>
+					<span data-block=".step-3"></span>
 				</div>
 				<div class="step-cont">
 					<div class="step-title">
@@ -438,7 +467,16 @@
 			</ul>
 		</div>
 	</div>
-	<div id="map_canvas"></div>
+	<div class="b b-map">
+		<div class="contacts">
+			<h2>Контакты</h2>
+			<div class="img" style="background-image: url('i/contacts.jpg');"></div>
+			<h3><b>Адрес:</b> Москва,<br>ул. Ленинская Слобода, 26</h3>
+			<h3><b>Метро:</b> Автозаводская, Дубровка, Технопарк</h3>
+			<h3><b>Телефон:</b> +7 495 803‑33-33</h3>
+		</div>
+		<div id="map_canvas"></div>
+	</div>
 	<div class="b b-footer">
 		<div class="b-block clearfix">
 			<a class="logo left clearfix" href="/">
@@ -529,6 +567,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fancybox.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script type="text/javascript" src="js/fastclick.js"></script>
